<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar"
    style="@style/Toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:elevation="@dimen/toolbar_elevation"
    app:layout_scrollFlags="scroll|enterAlways">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical|end">

        <EditText
            android:id="@+id/et_server_search"
            style="@style/TextStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/btn_server_search"
            android:backgroundTint="@color/white"
            android:cursorVisible="true"
            android:hint="@string/search_et_hint"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/search_et_text_size" />

        <ImageButton
            android:id="@+id/btn_server_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:backgroundTint="@color/transparent"
            android:src="@drawable/search_button_selector"

            />
    </RelativeLayout>
</android.support.v7.widget.Toolbar>